# Ub-IntervalTimer

./: CMakeLists.txt  README.md  manifest.json.in
app/: CMakeLists.txt  IntervalTimer.desktop.in  Main.qml  running.qml
app/tests/autopilot/IntervalTimer/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/IntervalTimer/: backend.cpp  backend.h  mytype.cpp
backend/tests/unit/: tst_mytype.qml
